Hero image cutoff on mobile devices issue fix

--- a/src/Pages/Home/Hero.css
+++ b/src/Pages/Home/Hero.css
@@ -130,7 +130,7 @@
 
 /* Image Container */
 .hero-image-container {
-  margin-top: -5rem;
+  margin-top: 1rem;
   width: 100%;
   max-width: 700px;
   display: flex;
